Fix spacing issues

--- a/frontend/src/styles/_animations.scss
+++ b/frontend/src/styles/_animations.scss
@@ -5,7 +5,7 @@
         transform: scale(1);
     }
     50% {
-        transform: scale(1.06);
+        transform: scale(1.2);
     }
     100% {
         transform: scale(1);
