--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -66,7 +66,7 @@
 
 
 .pulsate{
-    animation: pulse 20s 2s ease-in-out infinite;
+    animation: pulse 10s 2s ease-in-out infinite;
     // filter: drop-shadow(0 0 15px rgba(185, 43, 43, 0.8));
    // filter: drop-shadow(5px 5px 10px rgba(120, 12, 91, 0.8));
     filter: drop-shadow(-5px -5px 5px rgba(185, 43, 43, 0.8))
